--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
   "private": true,
-  "name": "anishtro",
-  "version": "1.0.0",
-  "author": "Simon Lydell",
-  "main": "scripts/repl.js",
   "scripts": {
     "test": "mocha --ui tdd scripts/test-layout.js"
   },
-  "dependencies": {
-    "text-frequencies-analysis": "^2.0.0",
-    "wikipedia-gather": "lydell/wikipedia-gather"
-  },
   "devDependencies": {
-    "mocha": "^2.2.5"
+    "mocha": "5.2.0",
+    "text-frequencies-analysis": "2.0.0",
+    "wikipedia-gather": "lydell/wikipedia-gather"
   }
 }
